force-app/main/default/objects/show_holiday__c/show_holiday__c.object-meta.xml
<CustomObject>
    <label>show holiday</label>
    <nameField>
        <label>show holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>show holiday</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>