force-app/main/default/objects/show_holiday__c/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <businessOwnerUser>himanshu@apaccloud.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>show holiday</relationshipLabel>
    <relationshipName>show_holiday</relationshipName>
    <type>Lookup</type>
</CustomField>