force-app/main/default/objects/show_holiday__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <formula>CASE(
 MOD(  start_date__c - DATE(1900, 1, 7), 7),
  0, (start_date__c ) +   Term_in_days__c + FLOOR((Term_in_days__c -1)/7)*2,
  1, (start_date__c ) + Term_in_days__c + FLOOR((Term_in_days__c )/7)*2,
  2, (start_date__c ) + Term_in_days__c + FLOOR((Term_in_days__c +1)/7)*2,
  3, (start_date__c ) + Term_in_days__c + FLOOR((Term_in_days__c +2)/7)*2,
  4, (start_date__c ) + Term_in_days__c + FLOOR((Term_in_days__c +3)/7)*2,
  5, (start_date__c ) + Term_in_days__c + CEILING((Term_in_days__c )/7)*2,
  6, (start_date__c ) - IF(Term_in_days__c &gt;0,1,0) + Term_in_days__c + CEILING((Term_in_days__c )/7)*2,
null)-1 + holidays_counter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EndDate</label>
    <type>Date</type>
</CustomField>