force-app/main/default/objects/show_holiday__c/fields/holidays_counter__c.field-meta.xml
<CustomField>
    <fullName>holidays_counter__c</fullName>
    <label>holidays counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>