force-app/main/default/objects/show_holiday__c/fields/Term_in_days__c.field-meta.xml
<CustomField>
    <fullName>Term_in_days__c</fullName>
    <label>Term in days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>